syntax = "proto3";
package multiplica; 
option go_package =  "multiplica/multiplica";

message MessageIn {
  int32 Number1 = 1;
  int32 Number2 = 2;
}

message MessageOut {
	int32 Result = 1;
}



service Multiplicar {
  rpc Multiplica(MessageIn) returns (MessageOut) {}
}
